Integration tests for references, gateway updates for references
