# go/mtap/api/v1/events.swagger.json
@@ -4,6 +4,10 @@
     "title": "mtap/api/v1/events.proto",
     "version": "version not set"
   },
+  "schemes": [
+    "http",
+    "https"
+  ],
   "consumes": [
     "application/json"
   ],
@@ -474,11 +478,11 @@
       "type": "string",
       "enum": [
         "UNKNOWN",
-        "JSON",
-        "OTHER"
+        "GENERIC",
+        "CUSTOM"
       ],
       "default": "UNKNOWN",
-      "description": " - UNKNOWN: Default, no labels field set or not known.\n - JSON: Has the \"json_labels\" field set.\n - OTHER: Has the \"other_labels\" field set."
+      "description": " - UNKNOWN: Default, no labels field set or not known.\n - GENERIC: Has the \"generic_labels\" field set.\n - CUSTOM: Has the \"custom_labels\" field set."
     },
     "protobufAny": {
       "type": "object",
@@ -563,11 +567,11 @@
           "type": "string",
           "description": "A document-unique identifier for the index to create on the document."
         },
-        "json_labels": {
-          "$ref": "#/definitions/v1JsonLabels",
+        "generic_labels": {
+          "$ref": "#/definitions/v1GenericLabels",
           "description": "JsonLabels, which are a generic JSON object that should have the\nstart_index and end_index fields as well as any other fields that\nthe application requires."
         },
-        "other_labels": {
+        "custom_labels": {
           "$ref": "#/definitions/protobufAny",
           "description": "Experimental, a different type of serialized message, which the Events\nservice will store and return directly to clients."
         },
@@ -615,6 +619,52 @@
         }
       },
       "description": "Response from the service for closing events."
+    },
+    "v1GenericLabel": {
+      "type": "object",
+      "properties": {
+        "identifier": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The unique identifier for the label."
+        },
+        "start_index": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The start offset of the label relative to the document."
+        },
+        "end_index": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The end offset of the label relative to the document."
+        },
+        "fields": {
+          "type": "object",
+          "description": "A structure containing the dynamic primitive fields of the label."
+        },
+        "reference_ids": {
+          "type": "object",
+          "description": "A structure containing the reference fields of the label."
+        }
+      }
+    },
+    "v1GenericLabels": {
+      "type": "object",
+      "properties": {
+        "is_distinct": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Whether the label index is distinct, i.e. only consists of non-overlapping,\nnon-empty spans of text."
+        },
+        "labels": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1GenericLabel"
+          },
+          "description": "The labels, which are dynamic JSON objects and must contain the number\nfields \"start_index\" and \"end_index\". Any other fields are application-\nspecific and dynamic."
+        }
+      },
+      "description": "A Label Index of dynamic Labels, which are client/processor specified data\nobjects containing information about an area of text."
     },
     "v1GetAllBinaryDataNamesResponse": {
       "type": "object",
@@ -690,34 +740,16 @@
     "v1GetLabelsResponse": {
       "type": "object",
       "properties": {
-        "json_labels": {
-          "$ref": "#/definitions/v1JsonLabels",
-          "description": "If the original were JsonLabels."
+        "generic_labels": {
+          "$ref": "#/definitions/v1GenericLabels",
+          "description": "If the original were GenericLabels."
         },
-        "other_labels": {
+        "custom_labels": {
           "$ref": "#/definitions/protobufAny",
           "description": "If the original were other_labels."
         }
       },
       "description": "The response for retrieving labels from an event and document."
-    },
-    "v1JsonLabels": {
-      "type": "object",
-      "properties": {
-        "is_distinct": {
-          "type": "boolean",
-          "format": "boolean",
-          "description": "Whether the label index is distinct, i.e. only consists of non-overlapping,\nnon-empty spans of text."
-        },
-        "labels": {
-          "type": "array",
-          "items": {
-            "type": "object"
-          },
-          "description": "The labels, which are dynamic JSON objects and must contain the number\nfields \"start_index\" and \"end_index\". Any other fields are application-\nspecific and dynamic."
-        }
-      },
-      "description": "A Label Index of dynamic Labels, which are client/processor specified data\nobjects containing information about an area of text."
     },
     "v1OpenEventRequest": {
       "type": "object",
